--- a/style.css
+++ b/style.css
@@ -20,10 +20,14 @@ body {
 .discribe {
   width: 300px;
   padding-right: 20px;
+}
+p {
+  margin-top: 0;
   line-height: 1.5;
 }
-.discribe p {
-  margin-top: 0;
+li {
+  padding: 4px;
+  line-height: 1.5;
 }
 .chart-box {
   width: 100%;
