--- a/style.css
+++ b/style.css
@@ -5,6 +5,18 @@ body {
   align-items: center;
   font-family: "Noto Sans TC", sans-serif;
 }
+h1 {
+  font-size: 20px;
+  text-align: center;
+}
+p {
+  margin-top: 0;
+  line-height: 1.5;
+}
+li {
+  padding: 4px;
+  line-height: 1.5;
+}
 .container {
   max-width: 1080px;
   margin: 0 auto;
@@ -20,14 +32,6 @@ body {
 .discribe {
   width: 300px;
   padding-right: 20px;
-}
-p {
-  margin-top: 0;
-  line-height: 1.5;
-}
-li {
-  padding: 4px;
-  line-height: 1.5;
 }
 .chart-box {
   width: 100%;
